<resources>
    <string name="app_name">Sport</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_voeg_lid_toe">Lid toevoegen</string>
    <string name="roepnaam">Roepnaam</string>
    <string name="tussenvoegsels">Tussenvoegsels</string>
    <string name="achternaam">Achternaam</string>
    <string name="adres">Adres</string>
    <string name="postcode">Postcode</string>
    <string name="woonplaats">Woonplaats</string>
    <string name="telefoon">Telefoon</string>
    <string name="email">E-mail</string>
    <string name="geboortedatum">Geboortedatum</string>
    <string name="geslacht">Geslacht</string>
    <string-array name="geslachtspinner">
        <item>man</item>
        <item>vrouw</item>
    </string-array>
    <string name="verzendLidKnop">Verstuur</string>
    <string name="wijzigLidKnop">Wijzig</string>
    <string name="title_activity_main">Sport</string>
    <string name="title_activity_list_leden">Ledenlijst</string>
    <string name="title_activity_wijzig_lid">Wijzig lid</string>
</resources>
