<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_wijzig_lid" tools:context="com.rocdev.android.sport.WijzigLidActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/tableLayout">

            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/roepnaam"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/wijzigRoepnaamEditText"
                    android:layout_weight="2"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/tussenvoegsels"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/wijzigTussenvoegselsEditText"
                    android:layout_weight="2"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/achternaam"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/wijzigAchternaamEditText"
                    android:layout_weight="2"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/adres"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/wijzigAdresEditText"
                    android:layout_weight="2"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/postcode"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/wijzigPostcodeEditText"
                    android:layout_weight="2"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/woonplaats"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/wijzigWoonplaatsEditText"
                    android:layout_weight="2"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/telefoon"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/wijzigTelefoonEditText"
                    android:layout_weight="2"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/email"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/wijzigEmailEditText"
                    android:layout_weight="2"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/geboortedatum"
                    android:layout_weight="1"
                    android:inputType="date"/>
                <EditText
                    android:id="@+id/wijzigGeboortedatumEditText"
                    android:layout_weight="2"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="@string/geslacht"
                    android:layout_weight="1"/>
                <Spinner
                    android:id="@+id/wijzigGeslachtSpinner"
                    android:layout_weight="2"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/wijzigLidButton"
                    android:layout_below="@+id/tableLayout"
                    android:layout_centerHorizontal="true"
                    android:text="@string/wijzigLidKnop"
                    android:layout_column="2" />
            </TableRow>


        </TableLayout>




    </ScrollView>

</RelativeLayout>
